--- a/src/App.css
+++ b/src/App.css
@@ -6,6 +6,13 @@
   height: 40vmin;
   pointer-events: none;
 }
+.app{
+  text-align: center;
+}
+.loader{
+  margin:10% auto;
+  text-align: center;
+}
 
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
